--- a/Resources/Prototypes/_NF/Recipes/Reactions/drinks.yml
+++ b/Resources/Prototypes/_NF/Recipes/Reactions/drinks.yml
@@ -1,3 +1,4 @@
+# Drinks
 - type: reaction # a poodle was here. this was editted to be in line with the recipes from the baristavend
   id: Coffee
   minTemp: 353 # ~80 deg C
@@ -31,6 +32,60 @@
   products:
     PumpkinSpiceLatte: 6
 
+- type: reaction
+  id: TheMadgob
+  reactants:
+    DoctorsDelight:
+      amount: 1
+    PumpkinFlesh:
+      amount: 3
+    JuiceThatMakesYouWeh:
+      amount: 1
+  products:
+    TheMadgob: 5
+
+- type: reaction
+  id: HoneyIcedTea
+  reactants:
+    Honey:
+      amount: 1
+    IcedTea:
+      amount: 1
+  products:
+    HoneyIcedTea: 2
+
+- type: reaction
+  id: WassailMulledAle
+  minTemp: 350
+  reactants:
+    Ale:
+      amount: 1
+    Sugar:
+      amount: 1
+    JuiceApple:
+      amount: 1
+    Everyspice:
+      amount: 1
+  products:
+    WassailMulledAle : 4
+
+- type: reaction
+  id: Eggnog
+  requiredMixerCategories:
+  - Shake # close enough to meringue?
+  reactants:
+    Sugar:
+      amount: 1
+    Cream:
+      amount: 1
+    Egg:
+      amount: 1
+    Rum:
+      amount: 1
+  products:
+    Eggnog: 4
+
+# Alcoholic Drinks
 - type: reaction
   id: GinAndSonic
   requiredMixerCategories:
@@ -96,44 +151,3 @@
       amount: 1
   products:
     BeesKnees: 5
-
-- type: reaction
-  id: HoneyIcedTea
-  reactants:
-    Honey:
-      amount: 1
-    IcedTea:
-      amount: 1
-  products:
-    HoneyIcedTea: 2
-
-- type: reaction
-  id: WassailMulledAle
-  minTemp: 350
-  reactants:
-    Ale:
-      amount: 1
-    Sugar:
-      amount: 1
-    JuiceApple:
-      amount: 1
-    Everyspice:
-      amount: 1
-  products:
-    WassailMulledAle : 4
-
-- type: reaction
-  id: Eggnog
-  requiredMixerCategories:
-  - Shake # close enough to meringue?
-  reactants:
-    Sugar:
-      amount: 1
-    Cream:
-      amount: 1
-    Egg:
-      amount: 1
-    Rum:
-      amount: 1
-  products:
-    Eggnog: 4
