--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -41,13 +41,26 @@
     idleState: icon
     runningState: icon
     staticPacks:
-    - NFServiceTechfabDeprecatedStatic
+    - NFLightsStatic
+    - NFBasicToolsStatic
+    - NFBasicStorageStatic
+    - NFBasicPartsStatic
+    - NFBasicElectronicsStatic
+    - NFBasicEvaStatic
+    - NFBasicEVAToolsStatic
+    - NFMaterialElectronicsStatic
+    - NFServiceStorageStatic
+    - NFBotanyToolsStatic
+    - NFServiceToolsStatic
+    - NFServiceEvaPackStatic
+    - NFServiceKitchenStatic
+    - NFServiceStatic
     - NFPaperAndPaperAccessories
     - ReportingStatic # DeltaV
     - CSPlumbingStatic # CS - showers, sinks, drains
   - type: EmagLatheRecipes
     emagStaticPacks:
-    - NFServiceTechfabDeprecatedEmagStatic
+    - NFServiceTechfabEmagStatic
   - type: BlueprintReceiver
     whitelist:
       tags:
@@ -77,9 +90,23 @@
     board: McServiceTechFabCircuitboard
   - type: Lathe
     staticPacks:
-    - NFServiceTechfabDeprecatedStatic
+    - NFLightsStatic
+    - NFBasicToolsStatic
+    - NFBasicStorageStatic
+    - NFBasicPartsStatic
+    - NFBasicElectronicsStatic
+    - NFBasicEvaStatic
+    - NFBasicEVAToolsStatic
+    - NFMaterialElectronicsStatic
+    - NFServiceStorageStatic
+    - NFBotanyToolsStatic
+    - NFServiceToolsStatic
+    - NFServiceEvaPackStatic
+    - NFServiceKitchenStatic
+    - NFServiceStatic
     - NFPaperAndPaperAccessories
     - ReportingStatic # DeltaV
+    - NFLightsColoredStatic
     - NFMcServiceTechfabStatic
 
 - type: entity
@@ -108,9 +135,22 @@
     idleState: icon
     runningState: icon
     staticPacks:
-    - NFEngineeringTechfabDeprecatedStatic
+    - NFLightsStatic
+    - NFBasicToolsStatic
+    - NFBasicStorageStatic
+    - NFBasicPartsStatic
+    - NFBasicElectronicsStatic
+    - NFBasicEvaStatic
+    - NFBasicEVAToolsStatic
+    - NFServiceToolsStatic
+    - NFMaterialElectronicsStatic
+    - NFEngineeringToolsStatic
+    - NFEngineeringBoardsStatic
+    - NFEngineeringStructureBoardsStatic
+    - NFEngineeringMaterialsStatic
     - NFInflatablesStatic
     - CSPlumbingStatic # CS - showers, sinks, drains
+
   - type: BlueprintReceiver
     whitelist:
       tags:
@@ -143,11 +183,22 @@
     idleState: icon
     runningState: icon
     staticPacks:
-    - NFSalvageTechfabDeprecatedStatic
+    - NFLightsStatic
+    - NFBasicToolsStatic
+    - NFBasicStorageStatic
+    - NFBasicPartsStatic
+    - NFBasicElectronicsStatic
+    - NFMaterialElectronicsStatic
+    - NFBasicEvaStatic
+    - NFBasicEVAToolsStatic
+    - NFBasicEvaLightsStatic
+    - NFSalvageStatic
+    - NFSalvageBoardsStatic
     - NFInflatablesStatic
+
   - type: EmagLatheRecipes
     emagStaticPacks:
-    - NFSalvageTechfabDeprecatedEmag
+    - NFSalvageTechfabEmag
   - type: BlueprintReceiver
     whitelist:
       tags:
@@ -180,10 +231,23 @@
     idleState: icon
     runningState: icon
     staticPacks:
-    - NFNfsdTechfabDeprecatedStatic
+    - NFLightsStatic
+    - NFBasicToolsStatic
+    - NFBasicStorageStatic
+    - NFBasicPartsStatic
+    - NFBasicElectronicsStatic
+    - NFBasicEvaStatic
+    - NFBasicEVAToolsStatic
+    - NFMaterialElectronicsStatic
+    - ReportingStatic # DeltaV
+    - NfsdWeaponsStatic
     - NfsdPracticeStatic
     - NfsdAmmoStatic
-    - ReportingStatic # DeltaV
+    - NFMercenaryMagazineStatic
+    - NFMercenaryStorageStatic
+    - NfsdToolsStatic
+    - NfsdTargetsStatic
+    - NfsdBoardsStatic
   - type: BlueprintReceiver
     whitelist:
       tags:
@@ -216,8 +280,22 @@
     idleState: icon
     runningState: icon
     staticPacks:
-    - NFMercenaryTechfabDeprecatedStatic
+    - NFLightsStatic
+    - NFBasicToolsStatic
+    - NFBasicStorageStatic
+    - NFBasicPartsStatic
+    - NFBasicElectronicsStatic
+    - NFBasicEvaStatic
+    - NFBasicEVAToolsStatic
+    - NFMaterialElectronicsStatic
+    - NFBasicEvaLightsStatic
+    - NFMercenaryStatic
+    - NFMercenaryToolsStatic
+    - NFMercenaryStorageStatic
+    - NFMercenaryWeaponsStatic
+    - NFMercenaryAmmoBoxesStatic
     - NfsdPracticeStatic
+    - NFMercenaryMagazineStatic
   - type: BlueprintReceiver
     whitelist:
       tags:
@@ -264,7 +342,23 @@
     idleState: mercenary-hacked
     runningState: mercenary-hacked
     staticPacks:
-    - NFHackedMercenaryTechfabDeprecatedStatic
+    - NFLightsStatic
+    - NFBasicToolsStatic
+    - NFBasicStorageStatic
+    - NFBasicPartsStatic
+    - NFBasicElectronicsStatic
+    - NFBasicEvaStatic
+    - NFBasicEVAToolsStatic
+    - NFBasicEvaLightsStatic
+    - NFMaterialElectronicsStatic
+    - NFMercenaryStatic
+    - NFMercenaryToolsStatic
+    - NFMercenaryStorageStatic
+    - NFMercenaryWeaponsStatic
+    - NFMercenaryAmmoBoxesStatic
+    - NfsdPracticeStatic
+    - NFHackedMercenaryClothingStatic
+    - NFMercenaryMagazineStatic
   - type: BlueprintReceiver
     whitelist:
       tags:
