--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/flatpacks.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/flatpacks.yml
@@ -614,6 +614,20 @@
     price: 600
     vendPrice: 85000
 
+#region Pirate
+
+- type: entity
+  parent: BaseNFFlatpack
+  id: PirateTechFabFlatpack
+  name: pirate techfab flatpack
+  description: A flatpack used for constructing a pirate techfab.
+  components:
+  - type: Flatpack
+    entity: PirateTechFab
+  - type: Sprite
+    layers:
+    - state: pirate_lathe
+
 #region Consoles
 - type: entity
   parent: BaseNFFlatpack
