--- a/Resources/Prototypes/_NF/Roles/Jobs/Pirates/nfpirate_captain.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Pirates/nfpirate_captain.yml
@@ -51,6 +51,8 @@
   storage:
     back:
     - AppraisalTool
+    - PirateTechFabFlatpack
+    - Multitool
 
 - type: chameleonOutfit
   id: NFPirateCaptainChameleonOutfit
