--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -300,7 +300,9 @@
     - NFMercenaryAmmoBoxesStatic
     - NfsdPracticeStatic
     - NFMercenaryMagazineStatic
+    - NFTopicalsStatic
     - NFMercenaryArchetypeStatic
+
   - type: BlueprintReceiver
     whitelist:
       tags:
