--- a/Resources/Prototypes/_DEN/Entities/Mobs/Species/ovinia.yml
+++ b/Resources/Prototypes/_DEN/Entities/Mobs/Species/ovinia.yml
@@ -128,10 +128,12 @@
           32:
             sprite: _DEN/Mobs/Species/Ovinia/displacement.rsi
             state: outerclothing_hardsuit
-  - type: Hunger
-    baseDecayRate: 0.026 #25% slower than normal (chewin they cud)
-  - type: Thirst
-    baseDecayRate: 0.075 #25% slower than normal
+  #CS - Replace dV Hunger/Thirst with Needs
+  - type: Needs
+    needs:
+    - NeedHungerDefault
+    - NeedThirstDefault
+  #CS - end
 
 
 
