--- a/Resources/Prototypes/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/Voice/speech_emotes.yml
@@ -384,7 +384,7 @@
 - type: emote
   id: Chirp
   name: chat-emote-name-chirp
-  category: Avali
+  category: Lizard #Changed from Avali to Lizard due to no Avali. Repurposing for Coyote lizard chrips
   available: false
   icon: Interface/Emotes/chirp.png
   whitelist:
