--- a/Resources/Prototypes/_DV/Species/vulpkanin.yml
+++ b/Resources/Prototypes/_DV/Species/vulpkanin.yml
@@ -70,6 +70,9 @@
     Snout:
       points: 35
       required: false
+    NeckFluff:
+      points: 35
+      required: false
     # Frontier: apparently these don't exist on Delta
     UndergarmentTop:
       points: 35
