BIGGER MAGS ITS NERF OR NOTHING

--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Magazines/rifle20.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Magazines/rifle20.yml
@@ -65,6 +65,7 @@
     steps: 10
     zeroVisible: false
   - type: Item
+    size: Normal #COYOTE increased size to normal
     sprite: _NF/Objects/Weapons/Guns/Ammunition/Magazine/Rifle/rifle20_drum.rsi
     inhandVisuals:
       left:
