added packs for .40 mags

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -497,6 +497,7 @@
       staticPacks:
       - NfsdAmmoStatic # Frontier: SecurityAmmoStatic<NfsdAmmoStatic
       - NFMercenaryMagazineStatic
+      - CSMagazineStatic # CS - Add .40 mags
     - type: MaterialStorage
       whitelist:
         tags:
