disable pirate fab

--- a/Resources/Prototypes/_NF/Roles/Jobs/Pirates/nfpirate_captain.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Pirates/nfpirate_captain.yml
@@ -51,7 +51,7 @@
   storage:
     back:
     - AppraisalTool
-    - PirateTechFabFlatpack
+    # - PirateTechFabFlatpack # CS - Disable pending piratefab rework/change
     - Multitool
 
 - type: chameleonOutfit
