--- a/Resources/Prototypes/_NF/Maps/debug.yml
+++ b/Resources/Prototypes/_NF/Maps/debug.yml
@@ -24,6 +24,7 @@
             Therapist: [ -1, -1]
             Borg: [ -1, -1]
             StationRepresentative: [ -1, -1 ]
+            Secretary: [ -1, -1 ]
             # StationTrafficController: [ -1, -1 ]
             SecurityGuard: [ -1, -1 ]
 #            Valet: [ -1, -1 ]
