LL2 name update and fixed LL3 to LL2 in pricing comment.

--- a/Resources/Prototypes/_CS/Shipyard/Expedition/seraphim.yml
+++ b/Resources/Prototypes/_CS/Shipyard/Expedition/seraphim.yml
@@ -13,9 +13,9 @@
 - type: vessel
   id: seraphim
   parent: BaseVessel
-  name: SLI Seraphim
+  name: LL2 Seraphim
   description: The winged savior of the SLI corpration! Featuring an expansive medbay, large mercenary armory, and fully expedition capable!
-  price: 285000 #97000, 48500(50%(exped) + 29100(LL3(30%) + 112500(price per tile) = 287100
+  price: 285000 #97000, 48500(50%(exped) + 29100(LL2(30%) + 112500(price per tile) = 287100
   category: Large
   group: Expedition
   shuttlePath: /Maps/_CS/Shuttles/Expedition/seraphim.yml
