--- a/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/cadet.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/cadet.yml
@@ -41,6 +41,7 @@
     - CSMagazinePistol40 # Coyote NFMagazineHighCapacityPistol35 < CSMagazinePistol40
     - CSMagazinePistol40Rubber # Coyote NFMagazineHighCapacityPistol35Rubber < CSMagazinePistol40Rubber
     - FrontierUplinkCoin10
+    - BaseSecurityUplinkRadioOfficer # Coyote added uplink for chunguses, removed their starting uplink coins
 
 - type: chameleonOutfit
   id: CadetChameleonOutfit
