Whoops, accidentally deleted this, putting it back

--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/medical_tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/medical_tables.yml
@@ -1040,6 +1040,7 @@
       - id: CrateEvaKitParamedic
       - id: CrateChemistryVials
       - id: CrateChemistrySecureKitChemist
+      - id: CrateEvaKitCmo
       - id: MedicalTechFabFlatpack # Coyote
       - id: VendingMachineMedicalFlatpack # Coyote
       - id: VendingMachineChemicalsFlatpack # Coyote
