--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/mercenary_tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/mercenary_tables.yml
@@ -470,7 +470,7 @@
   table: !type:GroupSelector
     children:
     - id: VendingMachinePickNPack
-      weight: 0.3
+      weight: 0.25 # Coyote: 0.30 < 0.25 Put it on par with the ammovend, lower it to give room for the extra weight below.
     - id: VendingMachineAmmo
       weight: 0.25
     - id: VendingMachineBountyVend
@@ -480,7 +480,7 @@
     - id: VendingMachineExpeditionaryFlatpackVend
       weight: 0.05
     - id: VendingMachineArcadia
-      weight: 0.05
+      weight: 0.10 # Coyote: 0.5 < 0.10 Slightly increase these, they're no longer turbo contraband.
     - id: VendingMachineSyndieContraband
       weight: 0.05
     - !type:NestedSelector
