--- a/Resources/Prototypes/Entities/Objects/Tools/handheld_mass_scanner.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/handheld_mass_scanner.yml
@@ -16,7 +16,7 @@
         visible: false
         map: [ "enum.PowerDeviceVisualLayers.Powered" ]
   - type: RadarConsole
-    maxRange: 512 # Coyote
+    maxRange: 256
     followEntity: true
   - type: Appearance
   - type: GenericVisualizer
