--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -66,7 +66,7 @@
     balance:
       SiliconMemory: 30
   - type: RadarConsole
-    maxRange: 512 # Coyote
+    maxRange: 256
     followEntity: true
   - type: TypingIndicator
     proto: robot
