Restrict the board

--- a/Resources/Prototypes/_COYOTE/Catalog/security_uplink_catalog.yml
+++ b/Resources/Prototypes/_COYOTE/Catalog/security_uplink_catalog.yml
@@ -25,7 +25,12 @@
   categories:
   - UplinkSecurityUtility
   conditions:
-  - !type:StoreWhitelistCondition
-    whitelist:
-      tags:
-      - SecurityUplink
+    - !type:StoreWhitelistCondition
+      whitelist:
+        tags:
+          - SecurityUplink
+    - !type:BuyerJobCondition
+      whitelist:
+        - Sheriff
+        - Bailiff
+        - Detective
