--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/weapon_tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/Items/weapon_tables.yml
@@ -138,8 +138,10 @@
       - id: SecBreachingHammer
       - id: ThrowingKnife
       - id: MiningDrillDiamond
+      - id: NFEnergyPickaxe #Coyote Another small addition
       - id: EnergyKatana
       - id: Truncheon
+      - id: Sledgehammer #Coyote Who doesn't love trash items in your RNG
     - !type:NestedSelector
       weight: 0.01
       tableId: TableDungeonLootWeaponsMeleeUnique
@@ -149,7 +151,7 @@
   id: TableDungeonLootWeaponsMeleeUnique
   table: !type:GroupSelector
     children:
-    - id: HyperEutacticBlade
+  # - id: HyperEutacticBlade removed Coyote Why was this here? 100% reflect all blade with serious damage
     - id: ClothingHandsKnuckleBoneCrushers
     - id: ArmBlade
     - id: Kanabou
@@ -241,7 +243,7 @@
       - id: WeaponCaseLongHristovExpedition
       - id: WeaponCaseLongMusketExpedition
     - !type:NestedSelector
-      weight: 0.05
+      weight: 0.03 #Coyote further reduction to lower the amount of high tier weapons 
       tableId: TableDungeonLootWeaponsRangedTier4
 
 # region ranged T4
