--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Wizard/conjured_items.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Wizard/conjured_items.yml
@@ -123,10 +123,10 @@
         Blunt: 9 # 12 hits to crit unarmored target
   - type: StaminaDamageOnCollide
     damage: 10 # 6 hits to slow, 10 hits to stun
-  - type: PointLight
-    color: MediumPurple
-    radius: 1.5
-    softness: 1
+  #- type: PointLight # Coyote: Removed over performance concerns
+  #  color: MediumPurple
+  #  radius: 1.5
+  #  softness: 1
 
 # Blood Cult Soaps
 - type: entity
