--- a/Resources/Prototypes/_CS/Entities/Objects/Weapons/Guns/SMGs/base_smg.yml
+++ b/Resources/Prototypes/_CS/Entities/Objects/Weapons/Guns/SMGs/base_smg.yml
@@ -48,7 +48,7 @@
 
 - type: entity
   id: CSBaseWeaponFrameHeavySubMachineGunCybersun
-  parent: [ BaseC4Contraband, CSBaseWeaponFrameHeavySubMachineGun ]
+  parent: [ BaseC2Contraband, NFBaseWeaponFrameSubMachineGun ] # Coyote: BaseC4Contraband < BaseC2Contraband
   abstract: true
   components:
   - type: GunWieldBonus
