--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
@@ -31,6 +31,7 @@
     inherentRadioChannels:
     - Common
     - Binary
+  - type: BankAccount # Coyote Borgs can now interact with bank accounts
 
 - type: entity
   id: BorgChassisGeneric
