--- a/Resources/Prototypes/_NF/Recipes/Construction/storage.yml
+++ b/Resources/Prototypes/_NF/Recipes/Construction/storage.yml
@@ -22,7 +22,7 @@
   conditions:
     - !type:WallmountCondition
 
-## Wall lockers
+## Wall lockers # Coyote
 - type: construction
   id: LockerWallUpgradableBasic
   graph: WallmountStorage
