--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers.yml
@@ -28,7 +28,7 @@
       entity_storage: !type:Container
       paper_label: !type:ContainerSlot # Defined for any locker inheriting a physical one.
 
-- type: entity
+- type: entity # Coyote: constructible lockers
   abstract: true
   id: LockerWallFrameBase
   name: locker frame
@@ -92,7 +92,7 @@
   - type: EntityStorageVisuals
     stateDoorOpen: open
     stateDoorClosed: door
-  - type: Destructible
+  - type: Destructible # Coyote make wall lockers metal
     thresholds:
     - trigger:
         !type:DamageTrigger
@@ -128,7 +128,7 @@
           False: { visible: false }
 # endregion
 
-#region Construction
+#region Construction #Coyote: constructible lockers
 - type: entity
   id: LockerWallFrame
   parent: [ LockerWallFrameBase, BaseStructureWallmount ]
