--- a/Resources/Prototypes/Recipes/Lathes/Packs/clothing.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/clothing.yml
@@ -133,6 +133,15 @@
   - ClothingUniformJumpsuitJanitor
   - ClothingUniformJumpskirtJanitor
   - ClothingUniformJumpsuitLawyerBlack
+  - ClothingUniformJumpsuitLawyerBlue # Coyote: More lawyer clothing in the printer [
+  - ClothingUniformJumpsuitLawyerRed
+  - ClothingUniformJumpsuitLawyerGood
+  - ClothingUniformJumpsuitLawyerPurple
+  - ClothingUniformJumpskirtLawyerBlack
+  - ClothingUniformJumpskirtLawyerBlue
+  - ClothingUniformJumpskirtLawyerRed
+  - ClothingUniformJumpskirtLawyerGood
+  - ClothingUniformJumpskirtLawyerPurple
   - ClothingUniformJumpsuitLibrarian
   - ClothingUniformJumpskirtColorLightBrown
   - ClothingUniformJumpsuitMime
