--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -811,6 +811,7 @@
   - ContractorGoldRing
   - ContractorAACTablet
   - ContractorBasketball
+  - ContractorTennisBall # Coyote. Woof.
   - ContractorFootball
   - ContractorBeachBall
   - ContractorCrayonBox
