--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -811,7 +811,7 @@
   - ContractorGoldRing
   - ContractorAACTablet
   - ContractorBasketball
-  - ContractorTennisBall # Coyote. Woof.
+  - ContractorTennisball # Coyote. Woof.
   - ContractorFootball
   - ContractorBeachBall
   - ContractorCrayonBox
