--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -197,6 +197,10 @@
   id: MobChicken
   description: Comes before an egg, and IS a dinosaur!
   components:
+  - type: MobThresholds # Coyote: Five less hitpoints, so you can Hristov them. [
+    thresholds:
+      0: Alive
+      95: Critical # Coyote end ]
   - type: Sprite
     drawdepth: Mobs
     layers:
@@ -665,6 +669,10 @@
   id: MobDuckMallard
   description: An adorable mallard duck, it's fluffy and soft!
   components:
+  - type: MobThresholds # Coyote: Five less hitpoints, so you can Hristov them. [
+    thresholds:
+      0: Alive
+      95: Critical # Coyote end ]
   - type: Sprite
     drawdepth: Mobs
     layers:
@@ -873,6 +881,10 @@
   id: MobCow
   description: Moo.
   components:
+  - type: MobThresholds # Coyote: Five less hitpoints, so you can Hristov them. [
+    thresholds:
+      0: Alive
+      95: Critical # Coyote end ]
   - type: Sprite
     drawdepth: Mobs
     layers:
@@ -1029,6 +1041,10 @@
   id: MobGoat
   description: Her spine consists of long sharp segments, no wonder she is so grumpy.
   components:
+  - type: MobThresholds # Coyote: Five less hitpoints, so you can Hristov them. [
+    thresholds:
+      0: Alive
+      95: Critical # Coyote end ]
   - type: Sprite
     drawdepth: Mobs
     layers:
@@ -3589,6 +3605,10 @@
   id: MobPig
   description: Oink.
   components:
+  - type: MobThresholds # Coyote: Five less hitpoints, so you can Hristov them. [
+    thresholds:
+      0: Alive
+      95: Critical # Coyote end ]
   - type: Sprite
     drawdepth: Mobs
     layers:
