--- a/Resources/Prototypes/Recipes/Lathes/Packs/clothing.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/clothing.yml
@@ -140,8 +140,7 @@
   - ClothingUniformJumpskirtLawyerBlack
   - ClothingUniformJumpskirtLawyerBlue
   - ClothingUniformJumpskirtLawyerRed
-  - ClothingUniformJumpskirtLawyerGood
-  - ClothingUniformJumpskirtLawyerPurple
+  - ClothingUniformJumpskirtLawyerPurple # Coyote ]
   - ClothingUniformJumpsuitLibrarian
   - ClothingUniformJumpskirtColorLightBrown
   - ClothingUniformJumpsuitMime
